--- a/LibraryMvcApp/app/templates/multimediaAdd.html
+++ b/LibraryMvcApp/app/templates/multimediaAdd.html
@@ -18,7 +18,6 @@
 
     <div>
         <!--forms-->
-
         <!--All multimedias-->
         <div>
             <div class="form-group">
@@ -50,19 +49,28 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-lg-2 control-label">Value</label>
+                <label class="col-lg-2 control-label">Publisher</label>
                 <div class="col-lg-10">
-                    <input type="text" class="form-control" name="Value" ng-model="multimedia.Value" ng-maxlength="255" />
-                    <span class="text-danger" ng-show="(frmAddMultimedia.Value.$touched || frmAddMultimedia.Value.$dirty) && frmAddMultimedia.Value.$invalid">
-                        <span ng-show="frmAddMultimedia.Value.$error.maxlength">Value must be less than or equal to 255</span>
+                    <input type="text" class="form-control" name="Publisher" ng-model="multimedia.Publisher" ng-maxlength="255" />
+                    <span class="text-danger" ng-show="(frmAddMultimedia.Publisher.$touched || frmAddMultimedia.Publisher.$dirty) && frmAddMultimedia.Publisher.$invalid">
+                        <span ng-show="frmAddMultimedia.Publisher.$error.maxlength">Publisher must be less than or equal to 255</span>
                     </span>
                 </div>
             </div>
+            <div class="form-group">
+                <label class="col-lg-2 control-label">Cover photo</label>
+                <div class="col-lg-10">
+                    <div>
+                        <input type="file" name="file" value="Upload File" accept="image/*" onchange="angular.element(this).scope().selectFileforUpload(this.files)" />
+                        <span class="error" ng-show="(frmAddMultimedia.CoverPhoto.$dirty) ">Image error !</span>
+                    </div>
+                </div>
+            </div>
         </div>
-
+        
         <!--electronic multimedia-->
         <div>
-            <div ng-if="multimedia.SelectedClass == 'Audio book' || multimedia.SelectedClass == 'game' || multimedia.SelectedClass == 'MusicRecord'" class="form-group">
+            <div ng-if="multimedia.SelectedClass == 'Audio book' || multimedia.SelectedClass == 'Game' || multimedia.SelectedClass == 'Music record'" class="form-group">
                 <label class="col-lg-2 control-label">Size</label>
                 <div class="col-lg-10">
                     <input type="text" class="form-control" name="Size" ng-model="multimedia.Size" ng-maxlength="255" />
@@ -82,15 +90,6 @@
                 </span>
             </div>
         </div>
-        <div ng-if="multimedia.SelectedClass == 'Audio book' || multimedia.SelectedClass == 'Music record'" class="form-group">
-            <label class="col-lg-2 control-label">Lenght</label>
-            <div class="col-lg-10">
-                <input type="text" class="form-control" name="Lenght" ng-model="multimedia.Lenght" ng-maxlength="255" />
-                <span class="text-danger" ng-show="(frmAddMultimedia.Lenght.$touched || frmAddMultimedia.Lenght.$dirty) && frmAddMultimedia.Lenght.$invalid">
-                    <span ng-show="frmAddMultimedia.Lenght.$error.maxlength">Lenght must be less than or equal to 255</span>
-                </span>
-            </div>
-        </div>
         <div ng-if="multimedia.SelectedClass == 'Audio book'" class="form-group">
             <label class="col-lg-2 control-label">Lector</label>
             <div class="col-lg-10">
@@ -100,12 +99,21 @@
                 </span>
             </div>
         </div>
+        <div ng-if="multimedia.SelectedClass == 'Audio book' || multimedia.SelectedClass == 'Music record'" class="form-group">
+            <label class="col-lg-2 control-label">Lenght</label>
+            <div class="col-lg-10">
+                <input type="text" class="form-control" name="Lenght" ng-model="multimedia.Lenght" ng-maxlength="255" />
+                <span class="text-danger" ng-show="(frmAddMultimedia.Lenght.$touched || frmAddMultimedia.Lenght.$dirty) && frmAddMultimedia.Lenght.$invalid">
+                    <span ng-show="frmAddMultimedia.Lenght.$error.maxlength">Lenght must be less than or equal to 255</span>
+                </span>
+            </div>
+        </div>
         <div ng-if="multimedia.SelectedClass == 'Game'" class="form-group">
             <label class="col-lg-2 control-label">OverEightteenYears</label>
             <div class="col-lg-10">
-                <input type="text" class="form-control" name="OverEightteenYears" ng-model="multimedia.OverEightteenYears" ng-maxlength="255" />
+                <input type="text" class="form-control" name="Over eightteen years" ng-model="multimedia.OverEightteenYears" ng-maxlength="1" />
                 <span class="text-danger" ng-show="(frmAddMultimedia.OverEightteenYears.$touched || frmAddMultimedia.OverEightteenYears.$dirty) && frmAddMultimedia.OverEightteenYears.$invalid">
-                    <span ng-show="frmAddMultimedia.OverEightteenYears.$error.maxlength">OverEightteenYears must be less than or equal to 255</span>
+                    <span ng-show="frmAddMultimedia.OverEightteenYears.$error.maxlength">Over eightteen years must be less than or equal to 1</span>
                 </span>
             </div>
         </div>
@@ -115,9 +123,9 @@
             <div ng-if="multimedia.SelectedClass == 'Magazine'" class="form-group">
                 <label class="col-lg-2 control-label">Number</label>
                 <div class="col-lg-10">
-                    <input type="text" class="form-control" name="Number" ng-model="multimedia.Number" ng-maxlength="255" />
+                    <input type="text" class="form-control" name="Number" ng-model="multimedia.Number" ng-maxlength="25" />
                     <span class="text-danger" ng-show="(frmAddMultimedia.Number.$touched || frmAddMultimedia.Number.$dirty) && frmAddMultimedia.Number.$invalid">
-                        <span ng-show="frmAddMultimedia.Number.$error.maxlength">Number must be less than or equal to 255</span>
+                        <span ng-show="frmAddMultimedia.Number.$error.maxlength">Number must be less than or equal to 25</span>
                     </span>
                 </div>
             </div>
@@ -133,38 +141,37 @@
             <div ng-if="multimedia.SelectedClass == 'Magazine'" class="form-group">
                 <label class="col-lg-2 control-label">GiftName</label>
                 <div class="col-lg-10">
-                    <input type="text" class="form-control" name="GiftName" ng-model="multimedia.GiftName" ng-maxlength="255" />
+                    <input type="text" class="form-control" name="Gift name" ng-model="multimedia.GiftName" ng-maxlength="255" />
                     <span class="text-danger" ng-show="(frmAddMultimedia.GiftName.$touched || frmAddMultimedia.GiftName.$dirty) && frmAddMultimedia.GiftName.$invalid">
-                        <span ng-show="frmAddMultimedia.GiftName.$error.maxlength">GiftName must be less than or equal to 255</span>
+                        <span ng-show="frmAddMultimedia.GiftName.$error.maxlength">Gift name must be less than or equal to 255</span>
                     </span>
                 </div>
             </div>
         </div>
-    
+
         <!--Written multimedia-->
         <div>
             <div ng-if="multimedia.SelectedClass == 'Book' || multimedia.SelectedClass == 'Magazine'" class="form-group">
                 <label class="col-lg-2 control-label">PagesCount</label>
                 <div class="col-lg-10">
-                    <input type="text" class="form-control" name="PagesCount" ng-model="multimedia.PagesCount" ng-maxlength="255" />
+                    <input type="text" class="form-control" name="Pages count" ng-model="multimedia.PagesCount" ng-maxlength="10" />
                     <span class="text-danger" ng-show="(frmAddMultimedia.PagesCount.$touched || frmAddMultimedia.PagesCount.$dirty) && frmAddMultimedia.PagesCount.$invalid">
-                        <span ng-show="frmAddMultimedia.PagesCount.$error.maxlength">PagesCount must be less than or equal to 255</span>
+                        <span ng-show="frmAddMultimedia.PagesCount.$error.maxlength">Pages count must number with less or equal digits than 10</span>
                     </span>
                 </div>
             </div>
             <div ng-if="multimedia.SelectedClass == 'Book' || multimedia.SelectedClass == 'Magazine'" class="form-group">
                 <label class="col-lg-2 control-label">TableOfContents</label>
                 <div class="col-lg-10">
-                    <input type="text" class="form-control" name="TableOfContents" ng-model="multimedia.TableOfContents" ng-maxlength="255" />
+                    <input type="text" class="form-control" name="Table of contents" ng-model="multimedia.TableOfContents" ng-maxlength="1500" />
                     <span class="text-danger" ng-show="(frmAddMultimedia.TableOfContents.$touched || frmAddMultimedia.TableOfContents.$dirty) && frmAddMultimedia.TableOfContents.$invalid">
-                        <span ng-show="frmAddMultimedia.TableOfContents.$error.maxlength">TableOfContents must be less than or equal to 255</span>
+                        <span ng-show="frmAddMultimedia.TableOfContents.$error.maxlength">Table of contents must be less than or equal to 1500</span>
                     </span>
                 </div>
             </div>
         </div>
-    
+
     </div>
-    <-->TODO: add file!(okładka) </-->
 
     <div class="form-group">
         <div class="col-lg-offset-2 col-lg-10">
