added login data for unlogged user in index.cshtml

--- a/LibraryMvc/Views/Home/Index.cshtml
+++ b/LibraryMvc/Views/Home/Index.cshtml
@@ -8,5 +8,8 @@
 }
 else
 {
-    <h2>Log in to display data</h2>
+    <text>
+    <h2>Log in to display data</h2><br/>
+    log in data: "admin@admin.pl" password: "Admin1."
+    </text>
 }
